fixed favorites page to not show whitespace

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,6 @@ span {
   font-weight: bold;
 }
 
-.jumbotron {
-  background-image: url(./assets/jumbo-bg.jpeg);
-  background-size: cover;
-  background-position: top;
-  height: 625px;
-}
 
 .intro {
   font-size: larger;
@@ -34,6 +28,13 @@ span {
 
 .home-logo:hover {
   animation: spin infinite .5s linear reverse;
+}
+
+.jumbotron {
+  background-image: url(./assets/jumbo-bg.jpeg);
+  background-size: cover;
+  background-position: top;
+  height: 625px;
 }
 
 .about {
@@ -122,7 +123,7 @@ span {
 }
 
 .likes {
-  height: 625px;
+  min-height: 625px;
 }
 
 @keyframes spin {
